댓글 숫자 보이게 변경

--- a/public/css/johayo.css
+++ b/public/css/johayo.css
@@ -569,6 +569,10 @@ p {
     animation: flying2-from-right 600ms;
 }
 
+.board-comment-count {
+    color: orangered
+}
+
 .board-detail {
     -webkit-animation: flying-from-right 600ms;
     animation: flying-from-right 600ms;
